# Copyright 2021 The OpenEthereum Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "ethereum"
version = "4.0.0-alpha"
authors = ["Karim Agha <karim.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ethereum-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.5"
rlp-derive = "0.1"
