# Copyright 2021 The OpenEthereum Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "networking"
version = "4.0.0-alpha"
authors = ["Karim Agha <karim.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devp2p = "0.4.1"
discv4 = { git = "https://github.com/rust-ethereum/discv4" }
ethereum = { path = "../core" }
oe4-runtime = { path = "../runtime" }
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.3", features = ["full"] }
rand = "0.8.3"
secp256k1 = { version = "0.20.1", features = ["recovery", "rand"] }
