# Copyright 2021 The OpenEthereum Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "oe"
version = "4.0.0-alpha"
authors = ["Karim Agha <karim.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auction = { path = "../auction" }
ethereum = { path = "../core" }
execution = { path = "../execution" }
networking = { path = "../networking" }
storage = { path = "../storage" }
consensus = { path = "../consensus" }
oe4-runtime = { path = "../runtime" }

tokio = { version = "1.3", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap/" }

[dev-dependencies]
futures-await-test = "0.3.0"